--- a/vk-automated-testing-tasks/build.gradle
+++ b/vk-automated-testing-tasks/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group = 'org.example'
+group = 'ru.vk.vetoshev.automated.testing.tasks'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation("com.codeborne:selenide:7.7.3")
+    implementation("com.codeborne:selenide:7.7.3")
+    runtimeOnly("io.goodforgod:slf4j-simple-logger:2.0.0")
 }
 
 test {
